--- a/index.html
+++ b/index.html
@@ -407,18 +407,49 @@
       <td>10 out 2024</td>
       <td>GameVicio :contentReference[oaicite:3]{index=3}</td>
     </tr>
-    <tr>
-      <td>FromSoftware decepcionada com Sony após o PS3</td>
-      <td>Relação azedou: Sony recusou o jogo no Ocidente, levando ao contrato com Bandai Namco para Dark Souls.</td>
-      <td>19 fev 2025</td>
-      <td>Meristation/Terra/GameVicio :contentReference[oaicite:4]{index=4}</td>
-    </tr>
-    <tr>
-      <td>Demon’s Souls 2 foi cancelado por causa da Sony</td>
-      <td>FromSoftware recusou desenvolver sequência por descontentamento com suporte da Sony no primeiro título.</td>
-      <td>19 fev 2025</td>
-      <td>PlayStation Lifestyle :contentReference[oaicite:5]{index=5}</td>
-    </tr>
+        <tr>
+        <td>FromSoftware decepcionada com Sony após o PS3</td>
+        <td>Relação azedou: Sony recusou o jogo no Ocidente, levando ao contrato com Bandai Namco para Dark Souls.</td>
+        <td>19 fev 2025</td>
+        <td>Meristation/Terra/GameVicio :contentReference[oaicite:4]{index=4}</td>
+        </tr>
+        <tr>
+        <td>Demon’s Souls 2 foi cancelado por causa da Sony</td>
+        <td>FromSoftware recusou desenvolver sequência por descontentamento com suporte da Sony no primeiro título.</td>
+        <td>19 fev 2025</td>
+        <td>PlayStation Lifestyle :contentReference[oaicite:5]{index=5}</td>
+        </tr>
+        <tr>
+        <td>Demon’s Souls 2 foi cancelado por causa da Sony</td>
+        <td>FromSoftware recusou desenvolver sequência por descontentamento com suporte da Sony no primeiro título.</td>
+        <td>19 fev 2025</td>
+        <td>PlayStation Lifestyle :contentReference[oaicite:5]{index=5}</td>
+        </tr>
+        <tr>
+        <td>FromSoftware recusou publicar Dark Souls pela Sony</td>
+        <td>Estúdio desapontado com tratamento da Sony no primeiro jogo, optou por Bandai Namco.</td>
+        <td>20 fev 2025</td>
+        <td>Video Games Chronicle :contentReference[oaicite:6]{index=6}</td>
+        </tr>
+        <tr>
+        <td>Shuhei Yoshida admite falhas da Sony com Demon’s Souls</td>
+        <td>Ex-presidente reconheceu que suporte limitado prejudicou relacionamento com FromSoftware.</td>
+        <td>21 fev 2025</td>
+        <td>Push Square :contentReference[oaicite:7]{index=7}</td>
+        </tr>
+        <tr>
+        <td>Elden Ring quase não existiu por conflito entre estúdio e Sony</td>
+        <td>Discordâncias quase encerraram parceria, mas estúdio voltou a colaborar posteriormente.</td>
+        <td>22 fev 2025</td>
+        <td>Meristation :contentReference[oaicite:8]{index=8}</td>
+        </tr>
+        <tr>
+        <td>FromSoftware e Sony se reaproximam para Bloodborne</td>
+        <td>Depois do afastamento, as empresas colaboram em título exclusivo do PlayStation.</td>
+        <td>23 fev 2025</td>
+        <td>OtakuPT :contentReference[oaicite:9]{index=9}</td>
+        </tr>
+
   </tbody>
 </table>
 
